[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = ["venv", ".venv", "migrations", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --disable-warnings"
testpaths = ["test"]
